# ChurchAssistant

./: .gitignore  README.md  audio_interface.py  bible_api.py  citation_recognition.py  config.py  display.py  main.py  performance_module.cpp  pyproject.toml  readme.md  requirements.txt  speech_recognition.py  tascammodel.py  utils.py
.devcontainer/: devcontainer.json
