[tool.poetry]
name = "churchassistant"
version = "0.1.0"
description = ""
authors = ["Emmanuel Akinwale <emmanuel.t.akinwale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
